[package]
name = "soroban-nft"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
testutils = ["soroban-sdk/testutils", "soroban-auth/testutils"]

[dependencies]
soroban-auth = { version = "0.4.3", features = ["testutils"] }
soroban-sdk = { version = "0.4.3", features = ["testutils"] }

[dev-dependencies]
ed25519-dalek = "1.0.1"
rand = "0.7.3"